feat(js-runtime): 添加JS运行时