@@ -5,6 +5,9 @@ plugins {
 dependencies {
 	implementation project.findProject(':magic-accessor:annotations') ?: project(':annotations')
 	annotationProcessor project.findProject(':magic-accessor:compiler') ?: project(':compiler')
+	implementation project(':magic-accessor:magic-js')
+	implementation 'org.mozilla:rhino:1.7.15'
+	implementation 'org.ow2.asm:asm:9.7.1'
 
 	implementation 'org.openjdk.jmh:jmh-core:1.37'
 	annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
@@ -74,6 +77,62 @@ tasks.register('jmhCold', JavaExec) {
 		'-i', '1',
 		'-bm', 'ss',
 		'-tu', 'us'
+	]
+	jvmArgs = [
+		'--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+		'--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+	]
+	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
+		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
+	}
+}
+
+tasks.register('jmhDecode', JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = 'org.openjdk.jmh.Main'
+	args = [
+		'hope.magic.example.BytecodeDecodeMicroBenchmark',
+		'-f', '1',
+		'-wi', '2',
+		'-i', '3',
+		'-bm', 'avgt',
+		'-tu', 'ns'
+	]
+	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
+		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
+	}
+}
+
+tasks.register('jmhJS', JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = 'org.openjdk.jmh.Main'
+	args = [
+		'hope.magic.example.MagicJSBenchmark',
+		'-f', '3',
+		'-wi', '3',
+		'-i', '5',
+		'-bm', 'avgt',
+		'-tu', 'ns'
+	]
+	jvmArgs = [
+		'--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+		'--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+	]
+	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
+		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
+	}
+}
+
+tasks.register('jmhInvoker', JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = 'org.openjdk.jmh.Main'
+	args = [
+		'hope.magic.example.DynamicInvokerBenchmark',
+		'-f', '3',
+		'-wi', '5',
+		'-i', '10',
+		'-bm', 'avgt',
+		'-tu', 'ns'
 	]
 	jvmArgs = [
 		'--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
